# AFIT-CSCE689-HW1-S

./: INSTALL  README  README.md  configure.ac
include/: TCPClient.h  TCPConn.h  TCPServer.h  config.h  exceptions.h
src/: Makefile.am  TCPClient.cpp  TCPConn.cpp  TCPServer.cpp  client_main.cpp  server_main.cpp  strfuncts.cpp
